# bev-patch-pf

./: .gitignore  README.md  index.html  pyproject.toml
asset/: bev_patch_pf_demo.rbl
config/: demo.yaml  run_pf.yaml  train.yaml
config/criterion/: geoloc.yaml
config/dataset/: alphatruck.yaml  arl_jackal_ahg.yaml  arl_jackal_eastwood.yaml  arl_jackal_onioncreek.yaml  arl_jackal_pickle.yaml  gq.yaml  tartandrive.yaml  ut-sara-gq.yaml
config/model/: bev_patch_net.yaml
config/optimizer/: adamw.yaml
config/scheduler/: cosine_warmup.yaml
config/sequence/: alphatruck.yaml  arl_jackal_ahg.yaml  arl_jackal_eastwood.yaml  arl_jackal_onioncreek.yaml  arl_jackal_pickle.yaml  gq.yaml  sara_eastwood.yaml  sara_onioncreek.yaml  sara_pickle.yaml  tartandrive.yaml  ut-sara-gq.yaml
paper_scripts/: eval_pf_results.py  viz_traj_eastwood.py  viz_traj_tartandrive.py
preprocessing/: README.md  align_trajectory_geotiff.py  preprocess_alphatruck.py  preprocess_arl_jackal.py  preprocess_gq.py  preprocess_tartandrive.py  synchronize_pose.py  utils.py
scripts/: export_onnx.py  export_to_onnx.py
src/: run_demo.py  run_pf.py  train.py  train_ddp.py
src/dataset/: README.md  alphatruck.py  arl_jackal.py  common.py  gq.py  tartandrive.py  utils.py
src/geotiff/: handler.py  manager.py
src/logger/: csv_logger.py  rerun_logger.py
src/metrics/: simple_retrieval.py
src/model/: aer_decoder.py  aer_patch_sampler.py  backbone.py  bev_encoder.py  bev_mapper.py  bev_patch_net.py  blocks.py  loss.py  positional_encoding.py  upernet.py
src/particle_filter/: __init__.py  particle.py  (+3 more)
(+4 files in other folders)
